# kevlar

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE.md  M1-PLAN.md  Makefile  NOTICE  README.md  WINDOWS-BUILD-SUMMARY.md  WINDOWS-SETUP.md  debug.jsonl  kdebug.out  kevlar.dump  make-windows.sh  pyproject.toml  rust-toolchain.toml  setup-windows.ps1  verify-windows-setup.sh  windows-install-deps.bat
.claude/: settings.local.json
Documentation/: FUTURE_SESSION_ARM64_PROMPT.md  (+10 more)
boot2dump/rust/: Cargo.toml
boot2dump/rust/src/: lib.rs
exts/virtio_blk/: Cargo.toml  lib.rs
exts/virtio_net/: Cargo.toml  lib.rs
kernel/: Cargo.toml  README.md  build.rs  ctypes.rs  deferred_job.rs  interrupt.rs  lang_items.rs  logger.rs  main.rs  pipe.rs  poll.rs  prelude.rs  random.rs  result.rs  services.rs  test_runner.rs  timer.rs  user_buffer.rs
kernel/arch/: mod.rs
kernel/arch/arm64/: arm64.json  arm64.ld  mod.rs  process.rs  usermode.S
kernel/arch/x64/: arch_prctl.rs  mod.rs  process.rs  x64-unwind.json  x64-unwind.ld  x64.json  x64.ld
kernel/cgroups/: cgroupfs.rs  mod.rs  pids_controller.rs
kernel/debug/: canary.rs  emit.rs  event.rs  filter.rs  htrace.rs  ktrace.rs  mod.rs  profiler.rs  tracer.rs  usercopy.rs
kernel/fs/: epoll.rs  eventfd.rs  file_system.rs  initramfs.rs  inode.rs  inotify.rs  mod.rs  mount.rs  opened_file.rs  path.rs  permission.rs  signalfd.rs  stat.rs  sysfs.rs  timerfd.rs  tmpfs.rs
kernel/fs/devfs/: evdev.rs  fb.rs  mice.rs  mod.rs  null.rs  tty.rs  zero.rs
kernel/fs/procfs/: metrics.rs  mod.rs  proc_self.rs  system.rs
kernel/kabi/: alloc.rs  bitops.rs  block.rs  breadcrumb.rs  bus.rs  cdev.rs  completion.rs  cpufeature.rs  device.rs  dma.rs  dma_resv.rs  drm.rs  drm_atomic.rs  drm_client.rs  drm_dev.rs  drm_edid.rs  drm_fb_helper.rs  drm_format.rs  drm_gem.rs  drm_gem_shadow.rs  drm_kms.rs  drm_prime.rs  elf.rs  exports.rs  ext4_arc_bulk_stubs.rs  ext4_arc_stubs.rs  fb.rs  fb_raster.rs  filemap.rs  folio_shadow.rs  fops.rs  fs_adapter.rs  fs_register.rs  fs_stubs.rs  fs_synth.rs  fs_synth_io.rs  inode_meta.rs  input.rs  io.rs  jbd2_stubs.rs  (+37 more)
kernel/kabi/arch/: arm64.rs  mod.rs  x64.rs
kernel/mm/: mod.rs  page_fault.rs  vm.rs
kernel/namespace/: mnt.rs  mod.rs  pid_ns.rs  uts.rs
kernel/net/: icmp_socket.rs  mod.rs  netlink.rs  packet_socket.rs  service.rs  socket.rs  tcp_socket.rs  udp_socket.rs  unix_socket.rs
kernel/process/: cmdline.rs  elf.rs  init_stack.rs  mod.rs  process.rs  process_group.rs  scheduler.rs  signal.rs  switch.rs  wait_queue.rs
kernel/syscalls/: accept.rs  access.rs  alarm.rs  arch_prctl.rs  bind.rs  brk.rs  capability.rs  chdir.rs  chmod.rs  chown.rs  chroot.rs  clock_gettime.rs  clone.rs  clone3.rs  close.rs  close_range.rs  connect.rs  dup.rs  dup2.rs  dup3.rs  epoll.rs  eventfd.rs  execve.rs  exit.rs  exit_group.rs  fadvise64.rs  fallocate.rs  fchdir.rs  fchmod.rs  fcntl.rs  flock.rs  fork.rs  fstat.rs  fsync.rs  ftruncate.rs  futex.rs  getcwd.rs  getdents64.rs  getegid.rs  getgroups.rs  (+112 more)
kernel/tty/: line_discipline.rs  mod.rs  pty.rs
libs/kevlar_api/: Cargo.toml  kernel_ops.rs  lib.rs  net.rs
libs/kevlar_api/driver/: block.rs  ioport.rs  mod.rs  net.rs  pci.rs
libs/kevlar_utils/: Cargo.toml  alignment.rs  bitmap_allocator.rs  buddy_alloc.rs  buddy_allocator.rs  bump_allocator.rs  byte_size.rs  bytes_parser.rs  downcast.rs  id_table.rs  lazy.rs  lib.rs  once.rs  ring_buffer.rs  static_cell.rs
libs/kevlar_vfs/: Cargo.toml
libs/kevlar_vfs/src/: file_system.rs  inode.rs  lib.rs  path.rs  result.rs  socket_types.rs  stat.rs  user_buffer.rs
libs/virtio/: Cargo.toml  device.rs  lib.rs
libs/virtio/transports/: mod.rs  virtio_mmio.rs  virtio_pci_legacy.rs  virtio_pci_modern.rs
platform/: Cargo.toml  README.md  address.rs  backtrace.rs  bootinfo.rs  capabilities.rs  crash_regs.rs  flight_recorder.rs  global_allocator.rs  lib.rs  lockdep.rs  logger.rs  mem.rs  page_allocator.rs  page_ops.rs  page_refcount.rs  page_trace.rs  pod.rs  print.rs  profile.rs  pt_refcount.rs  random.rs  spinlock.rs  stack_cache.rs  sync.rs  usercopy_trace.rs
platform/arm64/: backtrace.rs  boot.S  boot.rs  bootinfo.rs  cpu_local.rs  debugcon.rs  fp.rs  gic.rs  idle.rs  interrupt.rs  mod.rs  paging.rs  profile.rs  smp.rs  syscall.rs  task.rs  timer.rs  trap.S  usercopy.S  usermode.S  vdso.rs
platform/x64/: acpi.rs  ap_trampoline.S  apic.rs  backtrace.rs  boot.S  boot.rs  bootinfo.rs  cpu_local.rs  debugcon.rs  fbcon.rs  gen_setup.py  idle.rs  idt.rs  if_trace.rs  interrupt.rs  ioapic.rs  mod.rs  paging.rs  pit.rs  profile.rs  ps2kbd.rs  ps2mouse.rs  semihosting.rs  serial.rs  smp.rs  syscall.rs  task.rs  trap.S  tsc.rs  tss.rs  usercopy.S  usermode.S  vdso.rs  vga.rs
runtime/: Cargo.toml  address.rs  backtrace.rs  bootinfo.rs  global_allocator.rs  lib.rs  logger.rs  page_allocator.rs  print.rs  profile.rs  spinlock.rs
runtime/arm64/: backtrace.rs  boot.S  cpu_local.rs  idle.rs  interrupt.rs  mod.rs  paging.rs  semihosting.rs  serial.rs  timer.rs  trap.S
runtime/x64/: apic.rs  backtrace.rs  boot.S  boot.rs  bootinfo.rs  cpu_local.rs  gdt.rs  idle.rs  idt.rs  interrupt.rs  ioapic.rs  mod.rs  paging.rs  pit.rs  profile.rs  semihosting.rs  serial.rs  syscall.rs  tss.rs  vga.rs
services/kevlar_ext2/: Cargo.toml
services/kevlar_ext2/src/: lib.rs
services/kevlar_tmpfs/: Cargo.toml
services/kevlar_tmpfs/src/: lib.rs
tools/kxserver/: .gitignore  Cargo.toml  INPUT_TODO.md
tools/kxserver/.cargo/: config.toml
tools/kxserver/scripts/: diff-client.sh
tools/kxserver/src/: atom.rs  client.rs  colormap.rs  config.rs  device.rs  dispatch.rs  event.rs  fb.rs  font.rs  font_data.rs  gc.rs  input.rs  keymap.rs  log.rs  main.rs  pixmap.rs  property.rs  region.rs  render.rs  render_ext.rs  resources.rs  server.rs  setup.rs  state.rs  window.rs  wire.rs
tools/kxserver/tests/: phase10_smoke.py  phase11_smoke.py  phase4_smoke.py  phase5_smoke.py  phase6_smoke.py  phase7_smoke.py  phase8_smoke.py  phase9_smoke.py
tools/kxserver/tests/c/: gtk3_hello  gtk3_hello.c  xlib_hello  xlib_hello.c
(+975 files in other folders)
