[workspace]
resolver = "3"
members = [
    "platform",
    "kernel",
    "libs/*",
    "exts/*",
    "services/*",
]

[profile.dev]
opt-level = 2
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = 1
incremental = false
debug-assertions = false
overflow-checks = false
panic = "abort"
