# This is a Rust kernel project, not a Python package.
# pyproject.toml is used only for Python tooling configuration (uv, etc.)

[project]
name = "kevlar"
version = "0.1.0"
description = "Kevlar - A permissively licensed Rust kernel for running Linux binaries"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = []
