[package]
name = "kevlar_kernel"
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[[bin]]
name = "kevlar_kernel"
path = "main.rs"

[dependencies]
log = "0.4"
spin = "0.10"
goblin = { version = "0.10", default-features = false, features = ["elf64"] }
smoltcp = { version = "0.12", default-features = false, features = ["alloc", "proto-ipv4", "socket-raw", "socket-udp", "socket-tcp", "proto-dhcpv4", "socket-dhcpv4", "medium-ethernet"] }
boot2dump = { version = "0" }

# Data structures.
bitflags = "2"
arrayvec = { version = "0.7", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
atomic_refcell = "0.1"
bitvec = { version = "1", default-features = false, features = ["atomic", "alloc"] }

# Local dependencies.
kevlar_platform = { path = "../platform" }
kevlar_api = { path = "../libs/kevlar_api" }
kevlar_utils = { path = "../libs/kevlar_utils", features = ["no_std"] }

# Kernel Extensions.
virtio_net = { path = "../exts/virtio_net" }

# Arch-specific dependencies.
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
