[package]
name = "kevlar_kernel"
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[[bin]]
name = "kevlar_kernel"
path = "main.rs"

[features]
default = ["profile-balanced"]
profile-fortress = ["kevlar_platform/profile-fortress", "unwinding"]
profile-balanced = ["kevlar_platform/profile-balanced", "unwinding"]
profile-performance = ["kevlar_platform/profile-performance", "unwinding"]
profile-ludicrous = ["kevlar_platform/profile-ludicrous", "unwinding"]
# ktrace: high-bandwidth binary tracing via per-CPU ring buffers + debugcon dump.
ktrace = ["kevlar_platform/ktrace"]
ktrace-syscall = ["ktrace"]
ktrace-sched = ["ktrace"]
ktrace-vfs = ["ktrace"]
ktrace-net = ["ktrace"]
ktrace-mm = ["ktrace"]
ktrace-all = ["ktrace-syscall", "ktrace-sched", "ktrace-vfs", "ktrace-net", "ktrace-mm"]

[dependencies]
log = "0.4"
spin = "0.10"
goblin = { version = "0.10", default-features = false, features = ["elf64"] }
smoltcp = { version = "0.12", default-features = false, features = ["alloc", "log", "proto-ipv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "proto-dhcpv4", "socket-dhcpv4", "medium-ethernet"] }
# Data structures.
bitflags = "2"
arrayvec = { version = "0.7", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
atomic_refcell = "0.1"

# Local dependencies.
kevlar_platform = { path = "../platform", default-features = false }
kevlar_api = { path = "../libs/kevlar_api" }
kevlar_utils = { path = "../libs/kevlar_utils", features = ["no_std"] }
kevlar_vfs = { path = "../libs/kevlar_vfs" }
kevlar_tmpfs = { path = "../services/kevlar_tmpfs" }
kevlar_initramfs = { path = "../services/kevlar_initramfs" }
kevlar_ext2 = { path = "../services/kevlar_ext2" }

# Unwinding support for catch_unwind (Fortress/Balanced profiles).
unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic"], optional = true }

# Kernel Extensions.
virtio_blk = { path = "../exts/virtio_blk" }
virtio_net = { path = "../exts/virtio_net" }

# Arch-specific dependencies.
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
