[package]
name = "kevlar_platform"
description = "The unsafe platform layer for the Kevlar kernel (Ring 0)."
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[lib]
name = "kevlar_platform"
path = "lib.rs"

[dependencies]
log = "0.4"
cfg-if = "1"
arrayvec = { version = "0.7", default-features = false }
bitflags = "2"
atomic_refcell = "0.1"
spin = "0.10"
buddy_system_allocator = "0.11"
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }

# x64-specific dependencies (conditional).
vte = "0.13"
kevlar_utils = { path = "../libs/kevlar_utils", features = ["no_std"] }
log_filter = { path = "../libs/log_filter" }

[features]
default = ["profile-balanced"]
profile-fortress = []
profile-balanced = []
profile-performance = []
profile-ludicrous = []

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
