[package]
name = "virtio_blk"
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[lib]
name = "virtio_blk"
path = "lib.rs"

[dependencies]
kevlar_api = { path = "../../libs/kevlar_api" }
kevlar_utils = { path = "../../libs/kevlar_utils" }
virtio = { path = "../../libs/virtio" }
