[package]
name = "kevlar_api"
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[lib]
name = "kevlar_api"
path = "lib.rs"

[dependencies]
log = "0.4"
memoffset = "0.9"
arrayvec = { version = "0.7", default-features = false }

# Local dependencies.
kevlar_platform = { path = "../../platform", default-features = false }
kevlar_utils = { path = "../kevlar_utils" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
