[package]
name = "kevlar_vfs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"
description = "VFS trait definitions and shared types for the Kevlar kernel."

[dependencies]
bitflags = "2"
kevlar_platform = { path = "../../platform", default-features = false }
kevlar_utils = { path = "../kevlar_utils" }
