[package]
name = "kevlar_ext2"
version = "0.1.0"
authors = ["The Kevlar Authors"]
edition = "2024"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[dependencies]
log = "0.4"
kevlar_api = { path = "../../libs/kevlar_api" }
kevlar_utils = { path = "../../libs/kevlar_utils", features = ["no_std"] }
kevlar_vfs = { path = "../../libs/kevlar_vfs" }
